Added counters functionality

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <label for="num1">Номера</label>
                     <input type="text" id="num1" class="num num1" value="0">
                     <div class="form__btn-box">
-                        <button class="counter-btn btn-top">
+                        <button id="up-btn1" class="counter-btn-up btn-top">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
@@ -95,7 +95,7 @@
                             </svg>
 
                         </button>
-                        <button class="counter-btn btn-bottom">
+                        <button id="down-btn1" class="counter-btn-down btn-bottom">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
@@ -149,7 +149,7 @@
                     <label for="num2">Взрослые</label>
                     <input type="text" id="num2" class="num num2" value="0">
                     <div class="form__btn-box">
-                        <button class="counter-btn btn-top">
+                        <button id="up-btn2" class="counter-btn-up btn-top">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
@@ -196,7 +196,7 @@
                             </svg>
 
                         </button>
-                        <button class="counter-btn btn-bottom">
+                        <button id="down-btn2" class="counter-btn-down btn-bottom">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
@@ -250,7 +250,7 @@
                     <label for="num3">Дети</label>
                     <input type="text" id="num3" class="num num3" value="0">
                     <div class="form__btn-box">
-                        <button class="counter-btn btn-top">
+                        <button id="up-btn3" class="counter-btn-up btn-top">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
@@ -297,7 +297,7 @@
                             </svg>
 
                         </button>
-                        <button class="counter-btn btn-bottom">
+                        <button id="down-btn3" class="counter-btn-down btn-bottom">
                             <?xml version="1.0"?>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 xmlns:svgjs="http://svgjs.com/svgjs" version="1.1" width="12" height="12" x="0" y="0"
